--- a/css/main.css
+++ b/css/main.css
@@ -4,15 +4,15 @@ body {
 }
 
 #glass {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    backdrop-filter: blur(50px);
-    -webkit-backdrop-filter: blur(50px);
-    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-    z-index: -1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  z-index: -1;
 }
 
 #game-container {
@@ -29,7 +29,9 @@ body {
   border: 1px solid #999;
   background: #90ee90;
   width: 55px;
+  max-width: 55px;
   height: 55px;
+  max-height: 55px;
   text-align: center;
   border-radius: 10px;
 }
@@ -49,9 +51,28 @@ body {
 
 #game .cell {
   display: table-cell;
-  line-height: 55px;
+  padding: 0;
+  text-align: center;
+  line-height: 53px;
 }
 
 .editor-top {
   top: 4.5rem !important;
+}
+
+@media screen and (max-width: 768px) {
+  #game {
+    border-spacing: 5px;
+  }
+  
+  #game div {
+    width: 9vw;
+    max-width: 9vw;
+    height: 9vw;
+    max-height: 9vw;
+  }
+
+  #game .cell {
+    line-height: calc(9vw - 2px);
+  }
 }
